--- a/7/css/style.css
+++ b/7/css/style.css
@@ -336,12 +336,22 @@ grid-template-columns: 1fr 1fr 1fr;
 }
 
 /* Filter result */
+.filter-result {
+  padding-left: 72px;
+  padding-right: 72px;
+}
+
+.filter-result-header {
+  display: flex;
+  align-items: center;
+}
 
 .filter-result-tittle {
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
   color: var(--basic-black);
+  width: 163px;
 }
 
 .sorting-tittle {
@@ -349,17 +359,21 @@ grid-template-columns: 1fr 1fr 1fr;
   line-height: 18px;
   color: var(--basic-black);
   font-weight: 400;
+  width: 115px;
 }
 
 .sorting-list {
   list-style: none;
   font-size: 12px;
   line-height: 18px;
+  padding: 0px;
+  display: flex;
 }
 
 .sorting-item {
   color: var(--opacity-black);
   border-bottom: 1px dotted var(--basic-blue);
+  margin-right: 32px;
 }
 
 .sorting-item:hover {
@@ -378,6 +392,44 @@ grid-template-columns: 1fr 1fr 1fr;
 
 .result-list {
   list-style: none;
+  padding: 0px;
+  display: flex;
+  flex-direction: column;
+  display:  flex;
+}
+
+.result-list li {
+  display: flex;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.hotel-description {
+  margin-left: 37px;
+  margin-right: auto;
+  display: grid;
+  grid-template-columns: 110px 1fr;
+  column-gap: 6px;
+}
+
+.hotel-name {
+  width: 100%;
+  grid-column: 1 / 3;
+  margin: 0px;
+}
+
+.hotel-description p {
+  display: inline-block;
+  margin: 0px;
+}
+
+.star-container {
+  height: 17px;
+}
+
+.rating-container {
+  text-align: right;
+  height: 90px;
 }
 
 .hotel-link:hover {
@@ -404,4 +456,8 @@ grid-template-columns: 1fr 1fr 1fr;
 .rating {
   color: var(--rating-gray);
   background-color: var(--light-gray);
+  width: 110px;
+  height: 27px;
+  margin: 0px;
+  margin-top: 47px;
 }
