--- a/9/css/style.css
+++ b/9/css/style.css
@@ -31,7 +31,7 @@
   --dark-blue: #669ec0;
   --darkest-blue: #5496bd;
   --rating-gray: #666666;
-  --light-gray: #f2f2f2f2;
+  --light-gray: #f2f2f2;
   --active-logo-gray: #bdbbbc;
   --filter-toggle-gray: #ababab;
   --toggle-shadow: rgba(171,171,171, 0.3);
@@ -44,6 +44,10 @@
 }
 
 /* Global */
+
+.page {
+  background-color: var(--light-gray);
+}
 
 .page-body {
   width: 1200px;
@@ -78,7 +82,14 @@ img {
 
 .visually-hidden {
   position: absolute;
-  display: none;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip: rect(0, 0, 0, 0);
+  overflow: hidden;
 }
 
 /* Main navigation */
@@ -320,9 +331,6 @@ img {
   background-color: var(--darkest-brown);
   color: var(--opacity-white);
   border: none;
-}
-
-.button:focus {
   outline: none;
 }
 
@@ -383,7 +391,7 @@ img {
   background-color: var(--form-input-hover);
 }
 
-.date input:focus {
+.search-form input:focus {
   border: 2px solid var(--line-gray);
   background-color: var(--basic-white);
   outline: none;
@@ -403,10 +411,6 @@ img {
 
 .form-button:active * {
   fill: var(--basic-blue);
-}
-
-.form-button:focus {
-  outline: none;
 }
 
 .search-form .persons {
@@ -444,15 +448,6 @@ img {
   border: none;
   background-color: var(--light-gray);
   order: 2;
-}
-
-.minus-button:focus,
-.plus-button:focus {
-  outline: none;
-}
-
-.persons-container input:focus {
-  outline: none;
 }
 
 .children {
@@ -757,10 +752,6 @@ z-index: 1;
 .filter-button:hover {
   background-color: var(--basic-white);
   color: var(--basic-black);
-}
-
-.filter-button:focus {
-  outline: none;
 }
 
 /* Filter result */
